# compensation-analysis

./: .gitignore  Cargo.toml  build.rs  download.py  setup.sh
analysis/: Cargo.toml
analysis/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/protos/: fundraising.rs  mod.rs
common/src/schema/: details.rs  error.rs  eval.rs  mod.rs  summary.rs
compensation_analyzer/: README.md  pubspec.yaml
compensation_analyzer/android/app/: build.gradle
compensation_analyzer/android/app/src/debug/: AndroidManifest.xml
compensation_analyzer/android/app/src/main/: AndroidManifest.xml
compensation_analyzer/android/app/src/main/java/fr/membrives/compensation_analyzer/: MainActivity.java
compensation_analyzer/ios/Runner/: Info.plist
compensation_analyzer/ios/Runner.xcodeproj/: project.pbxproj
compensation_analyzer/lib/: input_widget.dart  main.dart  tag_service.dart
compensation_analyzer/test/: widget_test.dart
downloader/: Cargo.toml
downloader/golden/: fundraising_no_amount.html  fundraising_regular.html  fundraising_verified.html  no_result.html
downloader/protos/: fundraising.proto
downloader/src/: main.rs
downloader/src/leetchi/: details_parser.rs  index_parser.rs  mod.rs
golden/: fundraising_no_contributors.html  index.html
proto/: proto.capnp
protos/: fundraising.proto
src/: lib.rs  main.rs
src/leetchi/: details_parser.rs  index_parser.rs  mod.rs  parser.rs  schema.rs
