[package]
name = "analysis"
version = "0.1.0"
authors = ["Etienne J. Membrives <etienne@membrives.fr>"]
edition = "2018"
publish = false

[dependencies]
common = { path = "../common" }
rocksdb = "0.11.*"
rocket = "0.4"
rocket_contrib = "0.4"
chrono = "0.4"
clap = "2.32.0"
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 3
debug = false
lto = true
